<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".ui.task.TaskFragment">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/title"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="asdasdasd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/title"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="start"
                android:hint="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="asdasdasd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/description"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_in_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="-6dp"
                android:layout_marginTop="12dp"
                android:text="@string/send_to_qa"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/created_at"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="12dp"
                    app:cardCornerRadius="14dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="84dp"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_comment_intro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/comments"
                            android:textSize="13sp"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rec_comment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:clipToPadding="false"
                            android:orientation="vertical"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_comment_intro"
                            tools:itemCount="2"
                            tools:listitem="@layout/list_item_comment" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_add_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/Add"
                    app:fabSize="mini"
                    app:layout_anchor="@id/card_comment"
                    app:layout_anchorGravity="top|end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_input_add" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/save_changes"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
